fixing layout issues

--- a/prototypes/styletransfer/website/styles_hugging.css
+++ b/prototypes/styletransfer/website/styles_hugging.css
@@ -10,6 +10,7 @@
 }
 
 h1,
+span,
 h3 {
     text-align: center;
 }
